--- a/app/views/contacts/new.html.erb
+++ b/app/views/contacts/new.html.erb
@@ -1,12 +1,31 @@
-<%= form_for(@contact) do |f| %>
-  <%= f.label :name %>
-  <%= f.text_field :name %>
-  <br>
-  <%= f.label :email %>
-  <%= f.text_field :email %>
-  <br>
-  <%= f.label :content %>
-  <%= f.text_field :content %>
-  <br>
-  <%= f.submit %>
+<div class="container-fluid">
+   <div class="col-md-6 col-md-offset-3 col-sm-10 col-sm-offset-1">
+        <p><%= notice %></p>
+
+<%= form_for(@contact, url: choose_new_or_confirm) do |f| %>
+  <% if @contact.errors.any? %>
+    <div id="error_explanation">
+      <h2><%= @contact.errors.count %>件のエラーがあります。</h2>
+
+      <ul>
+      <% @contact.errors.full_messages.each do |msg| %>
+        <li><%= msg %></li>
+      <% end %>
+      </ul>
+    </div>
+  <% end %>
+  
+    <%= f.label :name %>
+     <%= f.text_field :name, class: 'form-control' %>
+     <br>
+     <%= f.label :email %>
+     <%= f.text_field :email, class: 'form-control' %>
+     <br>
+     <%= f.label :content %>
+     <%= f.text_field :content, class: 'form-control' %>
+     <br>
+     <%= f.submit '問い合わせる',class: 'btn btn-primary btn-block' %>
 <% end %>
+ <%= link_to '戻る', :back, class: 'btn btn-primary btn-block' %>
+    </div>
+</div>
