--- a/app/views/top/index.html.erb
+++ b/app/views/top/index.html.erb
@@ -25,7 +25,7 @@
             <p>ログイン機能</p>
           </div>
         </div>
-        <div class="col-md-3 col-sm-6">
+        <div class="col-sm-3 col-sm-6">
           <div class="function-image">
             <img src="<%= asset_path "mails.png" %>">
             <p>メール送信機能</p>
