--- a/app/views/top/index.html.erb
+++ b/app/views/top/index.html.erb
@@ -2,6 +2,7 @@
   <p><%= notice %></p>
   
   <section class="main-header">
+    <p class="flash"><%= notice %><%= alert %></p>
     <img src="<%= asset_path "achieve.png" %>">
   </section>
    
